--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+arrow==1.0.3
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
+idna==2.10
 importlib-metadata==3.10.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+oauthlib==3.1.0
 psycopg2==2.8.6
+PySocks==1.7.1
+python-dateutil==2.8.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+six==1.15.0
 SQLAlchemy==1.4.3
+tweepy==3.10.0
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 Werkzeug==1.0.1
 zipp==3.4.1
